cmake_minimum_required(VERSION 3.22)


# ------ TEMPLATE FOR NEW UNIT TEST ------------------

## HELP SET 
# set(VARIABLE TEST_NAME)
# set(
#   TEST_NAME_SRC 
#   ${CMAKE_CURRENT_LIST_DIR}/<SORCE_FILE>.cc
# )

## MAKE EXE
# add_executable(${TEST_NAME} ${TEST_NAME_SRC})
# target_link_libraries(
#   ${TEST_NAME} PUBLIC
#   gtest_main
#   gameBoytEmulator # LIB WITH PROJECT DEPENDENCIES
# )

## ADDIN TEST
# add_test(
#   NAME ${TEST_NAME}
#   COMMAND ${TEST_NAME}
# )


# ------ TEMPLATE FOR NEW UNIT TEST END ------------------